<resources>
    <string name="app_name">TORQFIX</string>
</resources>
